edited entire backend

--- a/.env
+++ b/.env
@@ -1,11 +1,37 @@
-APP_PORT = 3000
-DB_PORT = 3306
-DB_HOST = localhost
+# APP_PORT = 3000
+# DB_PORT = 3306
+# DB_HOST = localhost
+# DB_USER = root
+# DB_PASS = ''
+# MYSQL_DB = service_express
+# SESS_LIFETIME = TWO_HOURS
+# NODE_ENV = 'development'
+# SESS_NAME = 'enter_the_session_name'
+# SESS_SECRET = 'yoursecret'
+# JWTSECRET = 'secretOrPrivateKey'
+
 DB_USER = root
-DB_PASS = ''
-MYSQL_DB = service_express
-SESS_LIFETIME = TWO_HOURS
-NODE_ENV = 'development'
-SESS_NAME = 'enter_the_session_name'
-SESS_SECRET = 'yoursecret'
-JWTSECRET = 'secretOrPrivateKey'
+DB_PASSWORD=""
+DB_NAME = service_express
+DB_HOST = 127.0.0.1
+PORT = 3001
+NODE_ENV=development
+
+# ACCESS_TOKEN_SECRET = jsfgfjguwrg8783wgbjs849h2fu3cnsvh8wyr8fhwfvi2g225
+
+#JWT_EXPIRE_ACCESS = '30m'
+#JWT_EXPIRE_REFRESH = 86400 
+# for test
+JWT_EXPIRE_ACCESS = '60m'
+# in minutes
+JWT_EXPIRE_REFRESH = 120
+JWT_EXPIRE_VERIFICATION = 1440
+
+# SENDGRID_API_KEY = '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'
+#FROM_EMAIL = 'gboyega.banjo@gmail.com'
+# FROM_EMAIL = 'info@ivyarc.com'
+#CLIENT_URL = 'https://edgedev.ivyarc.com'
+CLIENT_URL = 'http://localhost:3000'
+BASE_URL = "http://localhost:3001/v1/"
+#BASE_URL = "https://edgeapidev.ivyarc.com/v1/"
+#BASE_URL = "https://edgeapi.ivyarc.com/v1/"
