--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DB_HOST = 127.0.0.1
 PORT = 3001
 NODE_ENV=development
 
-# ACCESS_TOKEN_SECRET = jsfgfjguwrg8783wgbjs849h2fu3cnsvh8wyr8fhwfvi2g225
+ACCESS_TOKEN_SECRET = jsfgfjguwrg8783wgbjs849h2fu3cnsvh8wyr8fhwfvi2g225
 
 #JWT_EXPIRE_ACCESS = '30m'
 #JWT_EXPIRE_REFRESH = 86400 
@@ -27,11 +27,8 @@ JWT_EXPIRE_ACCESS = '60m'
 JWT_EXPIRE_REFRESH = 120
 JWT_EXPIRE_VERIFICATION = 1440
 
-# SENDGRID_API_KEY = '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'
-#FROM_EMAIL = 'gboyega.banjo@gmail.com'
-# FROM_EMAIL = 'info@ivyarc.com'
-#CLIENT_URL = 'https://edgedev.ivyarc.com'
+SENDGRID_API_KEY = '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'
+FROM_EMAIL = 'myservicexpress247@gmail.com'
+#CLIENT_URL = 'https://servicexpress.biz'
 CLIENT_URL = 'http://localhost:3000'
 BASE_URL = "http://localhost:3001/v1/"
-#BASE_URL = "https://edgeapidev.ivyarc.com/v1/"
-#BASE_URL = "https://edgeapi.ivyarc.com/v1/"
