--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.7",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.0.1",
     "request-ip": "^3.3.0",
     "uuid": "^9.0.1"
