--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - run: echo Hello World
+      - run: echo Hello World!
       - name: upload
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
