--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -11,10 +11,39 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - run: echo Hello World!
-      - name: upload
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      - run: echo Hello World
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
         with:
-          ftp-server: ftp://nl1-ss105.a2hosting.com/api.servicexpress.biz
-          ftp-username: servi151
-          ftp-password: ${{ secrets.SERVER_SECRETE }}
+          node-version: "12.x"
+      - name: clean cache
+        run: npm cache clean --force
+      - name: delete package-lock.json
+        run: rm package-lock.json
+      - name: npm install
+        run: npm install
+      - name: install
+        run: npm ci
+      - name: build
+        run: npm run build
+        env:
+          CI: false
+      - name: copy build to home
+        run: cp -R build/* .
+      - name: delete build and node node_modules
+        run: rm -rf build node_modules
+      - name: stage changes
+        run: git add .
+      - name: git email configuration
+        run: git config --global user.email "myservicexpress247@gmail.com"
+      - name: git name configuration
+        run: git config --global user.name "service_xpress"
+      - name: commit changes
+        run: git commit -m "new build"
+      - name: upload
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3 
+        with:
+          server: ftp.nl1-ss105.a2hosting.com
+          username: servi151
+          password: ${{ secrets.SERVER_SECRETE }}
+          server-dir: api.servicexpress.biz/
