--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -2,48 +2,54 @@ name: Development - Build and Deploy
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+      - develop
 
 jobs:
   development:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - run: echo Hello World
+
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
-      - name: clean cache
-        run: npm cache clean --force
-      - name: delete package-lock.json
-        run: rm package-lock.json
-      - name: npm install
-        run: npm install
-      - name: install
-        run: npm ci
-      - name: build
+
+      - name: Clean cache and install dependencies
+        run: |
+          npm cache clean --force
+          rm -f package-lock.json
+          npm ci
+
+      - name: Build
         run: npm run build
         env:
           CI: false
-      - name: copy build to home
-        run: cp -R build/* .
-      - name: delete build and node node_modules
-        run: rm -rf build node_modules
-      - name: stage changes
-        run: git add .
-      - name: git email configuration
-        run: git config --global user.email "myservicexpress247@gmail.com"
-      - name: git name configuration
-        run: git config --global user.name "service_xpress"
-      - name: commit changes
-        run: git commit -m "new build"
-      - name: upload
-        uses: SamKirkland/FTP-Deploy-Action@4.3.3 
+
+  deploy:
+    needs: development
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+
+      - name: Install FTP-Deploy-Action
+        run: npm install -g SamKirkland/FTP-Deploy-Action
+
+      - name: FTP Deploy
+        run: ftp-deploy
         with:
           server: ftp.nl1-ss105.a2hosting.com
           username: servi151
-          password: ${{ secrets.SERVER_SECRETE }}
+          password: ${{ secrets.SERVER_SECRET }}
           server-dir: api.servicexpress.biz/
