--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -2,36 +2,57 @@ name: Development - Build and Deploy
 
 on:
   push:
-    branches:
-      - develop
+    branches: [develop]
 
 jobs:
-  build:
+  development:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
-      - name: Set up Node.js
+      - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
 
-      - name: Install dependencies
+      - name: clean cache
+        run: npm cache clean --force
+
+      - name: delete package-lock.json
+        run: rm package-lock.json
+
+      - name: npm install
+        run: npm install
+
+      - name: install
         run: npm ci
 
-      - name: Build
+      - name: build
         run: npm run build
         env:
           CI: false
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+      - name: copy build to home
+        run: cp -R dist/* .
 
-    steps:
-      - name: FTP Deploy
+      - name: delete build and node_modules
+        run: rm -rf dist node_modules
+
+      - name: stage changes
+        run: git add .
+
+      - name: git email configuration
+        run: git config --global user.email "myservicexpress247@gmail.com"
+
+      - name: git name configuration
+        run: git config --global user.name "service_xpress"
+
+      - name: commit changes
+        run: git commit -m "new build"
+
+      - name: Deploy to Server
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: ftp.nl1-ss105.a2hosting.com
