added send grid

--- a/.env
+++ b/.env
@@ -40,9 +40,9 @@ JWT_EXPIRE_REFRESH = 120
 JWT_EXPIRE_VERIFICATION = 1440
 
 
-SENDGRID_API_KEY = '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'
+SENDGRID_API_KEY = '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'
 
 FROM_EMAIL = 'myservicexpress247@gmail.com'
-#CLIENT_URL = 'https://servicexpress.biz'
-CLIENT_URL = 'http://localhost:3000'
-BASE_URL = "http://localhost:3001/v1/"
+CLIENT_URL = 'https://servicexpress.biz'
+# CLIENT_URL = 'http://localhost:3000'
+# BASE_URL = "http://localhost:3001/v1/"
