--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -1,61 +1,86 @@
+# name: Development - Build and Deploy
+
+# on:
+#   push:
+#     branches: [develop]
+
+# jobs:
+#   development:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 2
+#       - run: echo Hello World
+#       - name: Set up Node.js version
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: "12.x"
+
+#       - name: clean cache
+#         run: npm cache clean --force
+
+#       - name: delete package-lock.json
+#         run: rm package-lock.json
+
+#       - name: npm install
+#         run: npm install
+
+#       - name: install
+#         run: npm ci
+
+#       - name: build
+#         run: npm run build
+#         env:
+#           CI: false
+
+#       - name: copy build to home
+#         run: cp -R dist/* .
+
+#       - name: delete build and node_modules
+#         run: rm -rf dist node_modules
+
+#       - name: stage changes
+#         run: git add .
+
+#       - name: git email configuration
+#         run: git config --global user.email "myservicexpress247@gmail.com"
+
+#       - name: git name configuration
+#         run: git config --global user.name "service_xpress"
+
+#       - name: commit changes
+#         run: git commit -m "new build"
+
+#       - name: Deploy to Server
+#         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+#         with:
+#           server: ftp.nl1-ss105.a2hosting.com
+#           username: servi151
+#           password: ${{ secrets.SERVER_SECRET }}
+#           server-dir: api.servicexpress.biz/
+
+
 name: Development - Build and Deploy
 
 on:
   push:
+    branches: [develop]
+  pull_request:
     branches: [develop]
 
 jobs:
   development:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 2
       - run: echo Hello World
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
+      - name: upload
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          node-version: "12.x"
-
-      - name: clean cache
-        run: npm cache clean --force
-
-      - name: delete package-lock.json
-        run: rm package-lock.json
-
-      - name: npm install
-        run: npm install
-
-      - name: install
-        run: npm ci
-
-      - name: build
-        run: npm run build
-        env:
-          CI: false
-
-      - name: copy build to home
-        run: cp -R dist/* .
-
-      - name: delete build and node_modules
-        run: rm -rf dist node_modules
-
-      - name: stage changes
-        run: git add .
-
-      - name: git email configuration
-        run: git config --global user.email "myservicexpress247@gmail.com"
-
-      - name: git name configuration
-        run: git config --global user.name "service_xpress"
-
-      - name: commit changes
-        run: git commit -m "new build"
-
-      - name: Deploy to Server
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: ftp.nl1-ss105.a2hosting.com
-          username: servi151
-          password: ${{ secrets.SERVER_SECRET }}
-          server-dir: api.servicexpress.biz/
+          server: ftp.nl1-ss15.a2hosting.com
+          username: insightl
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir:  api.servicexpress.biz/
