edited env file

--- a/.env
+++ b/.env
@@ -44,5 +44,6 @@ SENDGRID_API_KEY = 'SG.MShIHp_IQaKT_D0CEUfyww.ZXJ3F4bxDY5T0aPEVRNVQiKAj2iqIFqudz
 
 FROM_EMAIL = 'myservicexpress247@gmail.com'
 CLIENT_URL = 'https://servicexpress.biz'
+BASE_URL= 'https://api.servicexpress.biz'
 # CLIENT_URL = 'http://localhost:3000'
 # BASE_URL = "http://localhost:3001/v1/"
