fixed database connection issues

--- a/.env
+++ b/.env
@@ -1,24 +1,12 @@
-# APP_PORT = 3000
-# DB_PORT = 3306
-# DB_HOST = localhost
-# DB_USER = root
-# DB_PASS = ''
-# MYSQL_DB = service_express
-# SESS_LIFETIME = TWO_HOURS
-# NODE_ENV = 'development'
-# SESS_NAME = 'enter_the_session_name'
-# SESS_SECRET = 'yoursecret'
-# JWTSECRET = 'secretOrPrivateKey'
-
 DB_USER = serviceXpress
 DB_PASSWORD="@service@express1"
 DB_NAME = servi151_service_express
 DB_HOST = 127.0.0.1
 PORT = 3001
-NODE_ENV=development
+NODE_ENV=production
 
 DB_USER = root
-DB_PASSWORD=""
+DB_PASSWORD=root
 DB_NAME = service_express
 DB_HOST = 127.0.0.1
 PORT = 3001
@@ -43,7 +31,7 @@ JWT_EXPIRE_VERIFICATION = 1440
 SENDGRID_API_KEY = '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'
 
 FROM_EMAIL = 'myservicexpress247@gmail.com'
-CLIENT_URL = 'https://servicexpress.biz'
-BASE_URL= 'https://api.servicexpress.biz'
-# CLIENT_URL = 'http://localhost:3000'
-# BASE_URL = "http://localhost:3001/v1/"
+# CLIENT_URL = 'https://servicexpress.biz'
+# BASE_URL= 'https://api.servicexpress.biz'
+CLIENT_URL = 'http://localhost:3000'
+BASE_URL = "http://localhost:3001/v1/"
